Refatoração - Utilização de DTOs para persitir dados Adição classe util para validação de email, refatoração em use cases, ajuste roles para login