@@ -10,7 +10,7 @@ import java.util.Collection;
 import java.util.List;
 import java.util.Objects;
 import java.util.UUID;
-import java.util.stream.Collectors;
+
 
 public class UserDetailsImpl implements UserDetails {
     private static final long serialVersionUID = 1L;
@@ -38,8 +38,8 @@ public class UserDetailsImpl implements UserDetails {
 
     public static UserDetailsImpl build(UserEntity user) {
         List<GrantedAuthority> authorities = user.getRoles().stream()
-                                                 .map(role -> new SimpleGrantedAuthority("ROLE_" + role))
-                                                 .collect(Collectors.toList());
+                                                 .map(role -> (GrantedAuthority) new SimpleGrantedAuthority("ROLE_" + role))
+                                                 .toList();
 
         return new UserDetailsImpl(user.getId(),
                                    user.getUsername(),
